# match3

./: .clang-format  .drone.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  logger.hpp  match3.cpp  template.html  test.cpp
data/: template.html
doc/cppcon-2016/: index.html
doc/cppnow-2016/: index.html
doc/cppnow-2016/uml/: match.uml  sd_swap.uml
doc/meetingcpp-2016/: index.html
doc/meetingcpp-2016/uml/: sd_match.uml
docs/: index.data  index.html  index.html.mem  index.js  index.wasm  match3
docs/cppnow-2016/: index.html
docs/match3/: index.data  index.html.mem  index.js  match3
docs/meetingcpp-2016/: index.html
docs/meetingcpp-2016/css/theme/: league.css
docs/meetingcpp-2016/uml/: design.uml  match3.uml  player.uml  sml.uml  switcher.uml  ui.uml
include/: config.hpp  game.hpp  pph.hpp
include/controller/: controller.hpp  player.hpp  switcher.hpp
include/controller/actions/: add_points.hpp  clear_selected.hpp  destroy_matches.hpp  drop_item.hpp  find_matches.hpp  generate_new.hpp  reset.hpp  scroll_board.hpp  select_item.hpp  show_board.hpp  show_game_over.hpp  show_matches.hpp  show_moves.hpp  show_points.hpp  show_swap.hpp  swap_items.hpp
include/controller/data/: moves.hpp  points.hpp  randomize.hpp  selected.hpp
include/controller/events/: down.hpp  key_pressed.hpp  matches.hpp  quit.hpp  time_tick.hpp  up.hpp
include/controller/guards/: has_items.hpp  is_allowed.hpp  is_item_winning.hpp  is_key.hpp  is_swap_items_winning.hpp
include/model/: board.hpp
include/view/: animations.hpp  ianimations.hpp  icanvas.hpp  sdl_canvas.hpp  view.hpp
src/: fwd.hpp  game.hpp  main.cpp  match3_final.hpp  match3_logic.hpp  pph.hpp
src/controller/: controller.hpp  logic.hpp
src/model/: board.hpp  config.hpp
src/view/: animations.hpp  icanvas.hpp  sdl_canvas.hpp  view.hpp
test/: CMakeLists.txt  ft.cpp  functional_tests.cpp  integration_tests.cpp
test/common/: fakeit.hpp  logger.hpp  mocks_provider.hpp  test.hpp  utils.hpp
test/fakes/: fake_canvas.hpp
test/functional_tests/: match3.cpp  match3_matchl_no_moves_reset.cpp  match5_out_of_moves.cpp
test/unit_tests/: actions.cpp  board.cpp  guards.cpp  logic.cpp
test/unit_tests/controller/actions/: clear_selected.cpp  destroy_matches.cpp  drop_item.cpp  find_matches.cpp  generate_new.cpp  scroll_board.cpp  swap_items.cpp
test/unit_tests/controller/guards/: has_items.cpp  is_item_winning.cpp  is_key.cpp
test/unit_tests/model/: board.cpp
